crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-15.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {\n            \"preserve\": [\"a\"]\n        } }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" viewBox=\"0 0 230 120\">\n    <!-- Don't collide minification with preserved ids -->\n    <defs>\n        <circle id=\"a\" fill=\"red\" cx=\"60\" cy=\"60\" r=\"50\"/>\n        <rect id=\"rect\" fill=\"blue\" x=\"120\" y=\"10\" width=\"100\" height=\"100\"/>\n    </defs>\n    <use xlink:href=\"#a\"/>\n    <use href=\"#rect\"/>\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 230 120">
    <!-- Don't collide minification with preserved ids -->
    <defs>
        <circle id="a" fill="red" cx="60" cy="60" r="50"/>
        <rect id="b" fill="blue" x="120" y="10" width="100" height="100"/>
    </defs>
    <use xlink:href="#a"/>
    <use href="#b"/>
</svg>
