crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-23.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\">\n  <!-- Rename within animation references, eg \"<id>.<property>\" -->\n  <circle cx=\"12\" cy=\"12\">\n    <animate id=\"thing1\" fill=\"freeze\" attributeName=\"r\" begin=\"0;thing2.end\" dur=\"1.2s\" values=\"0;11\"/>\n  </circle>\n  <circle cx=\"12\" cy=\"12\">\n    <animate id=\"thing2\" fill=\"freeze\" attributeName=\"r\" begin=\"thing1.begin+0.2s\" dur=\"1.2s\" values=\"0;11\"/>\n  </circle>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
    <!-- Rename within animation references, eg "<id>.<property>" -->
    <circle cx="12" cy="12">
        <animate id="b" fill="freeze" attributeName="r" begin="0;a.end" dur="1.2s" values="0;11"/>
    </circle>
    <circle cx="12" cy="12">
        <animate id="a" fill="freeze" attributeName="r" begin="b.begin+0.2s" dur="1.2s" values="0;11"/>
    </circle>
</svg>
